<resources>
    <string name="action_refresh">刷新</string>
    <string name="action_copy_url">复制链接</string>
    <string name="action_open_url">打开链接</string>
    <string name="action_clear_cache">清理缓存和历史</string>
    <string name="action_clear_cookie">清理cookie</string>
    <string name="action_share">分享</string>
    <string name="menu_web_horizontal">横屏显示</string>
    <string name="menu_web_vertical">竖屏显示</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="Description">Description</string>
    <string name="MainFileManagerNoPost">没有文章</string>
    <string name="MainFileManagerCreateHint">您可以点击右下角按钮创建新的文章</string>
    <string name="action_create_file">创建文章</string>
    <string name="create_folder">新建文件夹</string>
    <string name="file">文章</string>
    <string name="sure">确定</string>
    <string name="action_cancel">取消</string>
    <string name="action_search">搜索文章</string>
    <string name="please_enter">请输入</string>
    <string name="xxxx" translatable="false">xxxx</string>
    <string name="action_paste">粘贴</string>
    <string name="action_copy">复制</string>
    <string name="action_cut">剪切</string>
    <string name="action_delete">删除</string>
    <string name="action_rename">重命名</string>
    <string name="action_redo">重做</string>
    <string name="action_undo">撤销</string>
    <string name="action_save">保存</string>
    <string name="action_other_operate">其他操作</string>
    <string name="action_helper">语法参考</string>
    <string name="action_preview">预览</string>
    <string name="action_edit">Edit</string>
    <string name="action_setting">设置</string>
    <string name="about">About us</string>
    <string name="clear_cache">Clear cache</string>
    <string name="copy_right" translatable="false">Copyrights © 2016</string>
    <string name="version_string" translatable="false">Version %s</string>
    <string name="contact_me">联系我们</string>
    <string name="connect_with_us">与我们联系</string>
    <string name="advertise_with_us">广告联系</string>
    <string name="share_copy_text">复制为文本</string>
    <string name="share_text">分享为文本</string>
    <string name="share_md">分享为MD文件(.md)</string>
    <string name="share_html">分享为HTML文本(.html)</string>
    <string name="share_png">分享为图片(.png)</string>
    <string name="app_name">Christian</string>
    <string name="title_home">Home</string>
    <string name="title_book">Gospel</string>
    <string name="title_chat">Disciple</string>
    <string name="title_me">Me</string>
    <string name="title_poetry">Poetry</string>
    <string name="title_video">Video</string>
    <string name="version">1.0.0</string>
    <string name="next_week">简介</string>
    <string name="menu_more">More</string>
    <string name="share">Share</string>
    <string name="title_home_detail">Home Details</string>
    <string name="go_back">Go Back</string>
    <string name="content_empty">The content is empty</string>
    <string name="search_font_family">sans-serif</string>
    <string name="description_search">Search Gospel</string>
    <string name="description_clear_search">Clear search</string>
    <string name="description_gospel">Collection Gospel</string>
    <string name="read_history">Read History</string>
    <string name="title_activity_settings">Settings</string>
    <string name="pref_header_general">General</string>
    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>
    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>
    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>
    <string name="pref_header_data_sync">Data &amp; sync</string>
    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>
    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>
    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string-array name="multi_select_list_preference_default_value" />
    <string name="pref_title_system_sync_settings">System sync settings</string>
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_title_new_message_notifications">New message notifications</string>
    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>
    <string name="pref_title_vibrate">Vibrate</string>
    <string name="download">Download Gospel</string>
    <string name="sign_in">登录</string>
    <string name="register">注册</string>
    <string name="sign_out">登出</string>
    <string name="title_activity_login">Sign In</string>
    <string name="title_activity_register">Register</string>
    <string name="prompt_phone_number">Phone Number</string>
    <string name="prompt_email">User Name/Email/Phone Number</string>
    <string name="action_sign_in">Sign In</string>
    <string name="action_sign_in_short">Sign In</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="description_setting">Setting</string>
    <string name="wechat_login">Wechat Login</string>
    <string name="description_change_password">Forgot Password</string>
    <string name="description_download">Download Gospel</string>
    <string name="prompt_verification_code">Verification Code</string>
    <string name="prompt_password">Password</string>
    <string name="send_verification_code">Send Code</string>
    <string name="large_text">
        \n13除了从天降下仍旧在天的人子，没有人升过天。14摩西在旷野怎样举蛇，人子也必照样被举起来。15叫一切信他的都得永生。（或作叫一切信的人在他里面得永生）16神爱世人，甚至将他的独生子赐给他们，叫一切信他的，不至灭亡，反得永生。17因为神差他的儿子降世，不是要定世人的罪，（或作审判世人下同）乃是要叫世人因他得救。18信他的人，不被定罪。不信的人，罪已经定了，因为他不信神独生子的名。19光来到世间，世人因自己的行为是恶的，不爱光倒爱黑暗，定他们的罪就是在此。20凡作恶的便恨光，并不来就光，恐怕他的行为受责备。21但行真理的必来就光，要显明他所行的是靠神而行。\n\n
        13除了从天降下仍旧在天的人子，没有人升过天。14摩西在旷野怎样举蛇，人子也必照样被举起来。15叫一切信他的都得永生。（或作叫一切信的人在他里面得永生）16神爱世人，甚至将他的独生子赐给他们，叫一切信他的，不至灭亡，反得永生。17因为神差他的儿子降世，不是要定世人的罪，（或作审判世人下同）乃是要叫世人因他得救。18信他的人，不被定罪。不信的人，罪已经定了，因为他不信神独生子的名。19光来到世间，世人因自己的行为是恶的，不爱光倒爱黑暗，定他们的罪就是在此。20凡作恶的便恨光，并不来就光，恐怕他的行为受责备。21但行真理的必来就光，要显明他所行的是靠神而行。\n\n
        13除了从天降下仍旧在天的人子，没有人升过天。14摩西在旷野怎样举蛇，人子也必照样被举起来。15叫一切信他的都得永生。（或作叫一切信的人在他里面得永生）16神爱世人，甚至将他的独生子赐给他们，叫一切信他的，不至灭亡，反得永生。17因为神差他的儿子降世，不是要定世人的罪，（或作审判世人下同）乃是要叫世人因他得救。18信他的人，不被定罪。不信的人，罪已经定了，因为他不信神独生子的名。19光来到世间，世人因自己的行为是恶的，不爱光倒爱黑暗，定他们的罪就是在此。20凡作恶的便恨光，并不来就光，恐怕他的行为受责备。21但行真理的必来就光，要显明他所行的是靠神而行。\n\n\n
    </string>
    <string name="description_favorite">Favorite</string>
    <string name="title_search">Search</string>
    <string name="search_label">Christian</string>
    <string name="pref_on_preference_click">onPreferenceClick</string>
    <string name="settings_switch_preference_summary">Switch Preference Summary</string>
    <string name="settings_switch_preference_title">Switch Preference</string>
    <string name="settings_check_box_preference_title">Check Box Preference</string>
    <string name="settings_edit_text_preference_default_value">Material Design</string>
    <string name="settings_edit_text_preference_title">Edit Text Preference</string>
    <string name="settings_list_preference_dialog_title">List Preference</string>
    <string name="settings_list_preference_title">List Preference</string>
    <string name="settings_multi_select_list_preference_dialog_title">Multi Select List Preference</string>
    <string name="settings_multi_select_list_preference_title">Multi Select List Preference</string>
    <string name="settings_preference_click_title">OnPreferenceClickListener</string>
    <string name="settings_preference_click_to_activity">Click to start an activity</string>
    <string name="title_activity_scrolling_detail">ScrollingDetailActivity</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_content_fragment">ContentFragment</string>
    <string name="double_click_exit">Press again to exit the software</string>
    <string name="subtitle">约翰福音</string>
    <string name="title">Title</string>
    <string name="author">author</string>
    <string name="the_avatars">用户头像</string>
    <string name="banner_ad_unit_id" translatable="false">ca-app-pub-3940256099942544/6300978111</string>
    <string name="invitation_message">Please join me for a friendly chat</string>
    <string name="invitation_cta">Call to action</string>
    <string name="invitation_title">Friendly Chat Invite</string>
    <string name="fresh_config">Fresh Config</string>
    <string name="cause_crash">Cause Crash</string>
    <string name="invite_menu_label">Invite</string>
    <string name="_Gen">Gen</string>
    <string name="_Exo">Exo</string>
    <string name="_Lev">Lev</string>
    <string name="_Num">Num</string>
    <string name="_Deu">Deu</string>
    <string name="_Jos">Jos</string>
    <string name="_Jug">Jug</string>
    <string name="_Rut">Rut</string>
    <string name="_1Sa">1Sa</string>
    <string name="_2Sa">2Sa</string>
    <string name="_1Ki">1Ki</string>
    <string name="_2Ki">2Ki</string>
    <string name="_1Ch">1Ch</string>
    <string name="_2Ch">2Ch</string>
    <string name="_Ezr">Ezr</string>
    <string name="_Neh">Neh</string>
    <string name="_Est">Est</string>
    <string name="_Job">Job</string>
    <string name="_Psm">Psm</string>
    <string name="_Pro">Pro</string>
    <string name="_Ecc">Ecc</string>
    <string name="_Son">Son</string>
    <string name="_Isa">Isa</string>
    <string name="_Jer">Jer</string>
    <string name="_Lam">Lam</string>
    <string name="_Eze">Eze</string>
    <string name="_Dan">Dan</string>
    <string name="_Hos">Hos</string>
    <string name="_Joe">Joe</string>
    <string name="_Amo">Amo</string>
    <string name="_Oba">Oba</string>
    <string name="_Jon">Jon</string>
    <string name="_Mic">Mic</string>
    <string name="_Nah">Nah</string>
    <string name="_Hab">Hab</string>
    <string name="_Zep">Zep</string>
    <string name="_Hag">Hag</string>
    <string name="_Zec">Zec</string>
    <string name="search_hint">Search is not available now</string>
    <string name="description_start_voice_search">Start voice search</string>
    <string name="action_menu_overflow_description" msgid="2295659037509008453">More options</string>
    <string name="action_menu_back_from_search" msgid="1138551123844019647">"stoppen met zoeken"</string>
    <string name="favorite">Favorite</string>
    <string name="translate">Translate</string>
    <string name="read">Read</string>
    <string name="settings">Settings</string>
</resources>