<?xml version="1.0" encoding="utf-8"?>
<com.christian.view.SearchEditTextLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/search_view_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="@dimen/search_bottom_margin"
    android:layout_marginLeft="@dimen/search_margin_horizontal"
    android:layout_marginRight="@dimen/search_margin_horizontal"
    android:layout_marginTop="@dimen/search_top_margin"
    android:background="@drawable/rounded_corner"
    android:elevation="@dimen/search_box_elevation"
    android:orientation="horizontal">

    <LinearLayout
        android:id="@+id/search_box_collapsed"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingStart="@dimen/search_box_left_padding"
        android:paddingEnd="0dp"
        android:paddingLeft="@dimen/search_box_left_padding"
        android:paddingRight="0dp">

        <ImageView
            android:id="@+id/search_magnifying_glass"
            android:layout_width="@dimen/search_box_icon_size"
            android:layout_height="@dimen/search_box_icon_size"
            android:importantForAccessibility="no"
            android:padding="@dimen/search_box_search_icon_padding"
            android:scaleType="center"
            android:tint="@color/searchbox_icon_tint"
            app:srcCompat="@drawable/ic_search_black_24dp" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/search_box_start_search"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/search_box_collapsed_text_margin_left"
            android:layout_weight="1"
            android:typeface="@string/search_font_family"
            android:gravity="center_vertical"
            android:hint="@string/description_search"
            android:textColorHint="@color/searchbox_hint_text_color"
            android:textSize="@dimen/search_collapsed_text_size"
            android:layout_marginLeft="@dimen/search_box_collapsed_text_margin_left" />

        <ImageView
            android:id="@+id/voice_search_button"
            android:layout_width="@dimen/search_box_icon_size"
            android:layout_height="match_parent"
            android:background="?selectableItemBackgroundBorderless"
            android:clickable="true"
            android:contentDescription="@string/description_start_voice_search"
            android:scaleType="center"
            android:tint="@color/searchbox_icon_tint"
            app:srcCompat="@drawable/ic_mic_black_24dp" />

        <ImageButton
            android:id="@+id/dialtacts_options_menu_button"
            android:layout_width="@dimen/search_box_icon_size"
            android:layout_height="match_parent"
            android:background="?selectableItemBackgroundBorderless"
            android:contentDescription="@string/action_menu_overflow_description"
            android:paddingStart="0dp"
            android:paddingEnd="@dimen/search_box_right_padding"
            android:scaleType="center"
            android:visibility="gone"
            android:tint="@color/searchbox_icon_tint"
            app:srcCompat="@drawable/ic_more_vert_black_24dp"
            android:paddingRight="@dimen/search_box_right_padding"
            android:paddingLeft="0dp" />

    </LinearLayout>

    <include layout="@layout/search_bar_expanded" />

</com.christian.view.SearchEditTextLayout>
